# awdb

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.md  README.qmd  _pkgdown.yml  authors.html  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml
R/: awdb.R  data.R  extendr-wrappers.R  get-elements.R  get-forecasts.R  get-metadata.R  get-references.R  get-station-data.R  get-station-metadata.R  get-stations.R  set-options.R  utils.R
data/: bear_lake.rda  cascades.rda  element_codes.rda  network_codes.rda
data-raw/: bear-lake.R  element-codes.csv  network-codes.csv  prepare-date.R
dev/: test.R
man/: awdb.Rd  awdb_options.Rd  bear_lake.Rd  codes.Rd  datasets.Rd  get_elements.Rd  get_forecasts.Rd  get_references.Rd  get_station_data.Rd  get_station_metadata.Rd  get_stations.Rd
news/: index.html
reference/: awdb-package.html  awdb.html  awdb_options.html  bear_lake.html  cascades.html  datasets.html  get_elements.html  get_forecasts.html  get_references.html  get_stations.html  index.html  set_options.html
src/: Makevars.in  Makevars.win.in  awdb-win.def  entrypoint.c
src/rust/: Cargo.toml  vendor.tar.xz
src/rust/src/: lib.rs
